--- a/build.gradle
+++ b/build.gradle
@@ -8,12 +8,14 @@ version = '1.0-SNAPSHOT'
 repositories {
     mavenLocal()
     mavenCentral()
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
-    implementation project(':kernel-api');
-    implementation 'com.google.code.gson:gson:2.10.1';
+    // implementation project(':kernel-api');
+    // implementation 'com.google.code.gson:gson:2.10.1';
     compileOnly 'org.spigotmc:spigot:1.8.8-R0.1-SNAPSHOT'
+    implementation 'com.github.aimcvent:kernel-api:1.0.0'
 }
 
 def targetJavaVersion = 8
