--- a/build.gradle
+++ b/build.gradle
@@ -33,3 +33,24 @@ tasks.withType(JavaCompile).configureEach {
         options.release = targetJavaVersion
     }
 }
+
+jar {
+    configurations.implementation.setCanBeResolved(true)
+    configurations.implementation.resolutionStrategy {
+        duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
+    }
+    exclude('META-INF/LICENSE', 'META-INF/NOTICE')
+    doFirst {
+        from { (configurations.implementation.findAll { !it.path.endsWith(".pom") })
+                .collect { it.isDirectory() ? it : zipTree(it) } }
+    }
+}
+
+processResources {
+    def props = [version: version]
+    inputs.properties props
+    filteringCharset 'UTF-8'
+    filesMatching('plugin.yml') {
+        expand props
+    }
+}
