--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ repositories {
 dependencies {
     // implementation project(':kernel-api');
     // implementation 'com.google.code.gson:gson:2.10.1';
-    compileOnly 'org.spigotmc:spigot:1.8.8-R0.1-SNAPSHOT'
+    compileOnly 'org.spigotmc:spigot-api:1.8.8-R0.1-SNAPSHOT'
     implementation 'com.github.aimcvent:kernel-api:1.0.0'
 }
 
