--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ group = 'fr.aimcvent'
 version = '1.0-SNAPSHOT'
 
 repositories {
+    mavenLocal()
     mavenCentral()
     maven { url 'https://jitpack.io' }
     maven {
@@ -23,10 +24,9 @@ dependencies {
     // implementation 'com.google.code.gson:gson:2.10.1';
     compileOnly 'org.spigotmc:spigot-api:1.20.1-R0.1-SNAPSHOT'
     implementation 'com.github.aimcvent:kernel-api:1.0.2'
-
 }
 
-def targetJavaVersion = 8
+def targetJavaVersion = 17
 java {
     def javaVersion = JavaVersion.toVersion(targetJavaVersion)
     sourceCompatibility = javaVersion
